# alessandrosblog

./: .gitignore  CONTEXT.md  GEMINI.md  LICENSE  README.md  index.html  posts.json  robots.txt  sitemap.xml  update_posts.py
.github/: dependabot.yml
.pdf-temp/: advancing-science-math-gpt-5-2.tex  ai-agents-smart-cities-from-monitoring-to-action.tex  ai-and-alzheimers-not-a-cure-but-a-smarter-way-to-fight.tex  ai-fluency-better-way-to-work-with-ai-beyond-prompt-hacks.tex  ax-prover-revolutionizing-automated-theorem-proving-multi-agent-systems.tex  codex-self-improving-ai-coding-agent.tex  deepmind-uk-ai-security-institute-making-safety-more-measurable.tex  el-salvador-nationwide-ai-tutoring-program-whats-been-announced.tex  exploring-quantum-chaos-otocs.tex  how-people-actually-use-ai-agents-mostly-cognitive-work.tex  illusion-of-thinking-reasoning-models-problem-complexity.tex  mcp-google-services-missing-piece-ai-automation.tex  perplexity-at-work-simple-model-get-more-done.tex  perplexity-memory-personalization-without-repeating-yourself.tex  project-suncatcher-pioneering-space-based-ai-infrastructure.tex  revolutionizing-life-sciences-with-claude.tex  unraveling-consciousness-urgent-scientific-quest-age-of-ai.tex  weathernext-2-trying-to-make-the-atmosphere-less-chaotic.tex  when-ai-learns-how-to-learn-discorl-automating-rl-algorithms.tex  (+1 more)
api/: index.json
assets/js/: main.js  (+3 more)
tools/blogq/: pyproject.toml
tools/blogq/src/blogq/: cli.py  diagnostics.py  validate.py
tools/blogq/src/blogq/checks/: semantic.py
tools/blogq/src/blogq/schema/: posts.schema.json
(+118 files in other folders)
