[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "blogq"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = ["jsonschema>=4.25"]

[project.scripts]
blogq = "blogq.cli:main"

[tool.setuptools]
# Package discovery is handled by the section below

[tool.setuptools.packages.find]
where = ["src"]
include = ["blogq*"]

[tool.setuptools.package-data]
blogq = ["schema/*.json"]